--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="yandex-verification" content="0cc0a6d75e7430cf" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ČERNÁ</title>
@@ -20,23 +21,19 @@
         <article class="the">
             <img src="Orel.jpg" alt="">
             <p>Made for Business</p>
-
         </article>
         <article class="when">
             <div>
                 <img class="wether" src="wwww.jpg" alt="">
-
                             <p class="per">              The new<br>
 new collection<br>
           Winter2025</p>
-          
             </div>
             <div>
                 <img class='women' src="women.jpg" alt="">
                             <p class="name">              The new<br>
 new collection<br>
           Winter2025</p>
-                            
             </div>
             <p class="ssd">ČERNÁ – это не просто бутик; это пространство для тех, кто понимает, что истинный стиль — это отражение порядка и ясности мышления. В Праге, где история встречается с современным бизнесом, ваш внешний вид должен быть таким же точным и убедительным, как ваши решения</p>
         </article>
